[tool.poetry]
name = "fabdb-cards-downloader"
version = "0.1.0"
description = ""
authors = ["Illia <illi.zakh02@gmail.com>"]
readme = "README.md"
packages = [{include = "fabdb_cards_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
